# MasterHebrew

./: CMakeLists.txt  Dictionary.cpp  Dictionary.h  EndWordObject.cpp  EndWordObject.h  Lexical.cpp  Lexical.h  Main.cpp  Syntax.cpp  Syntax.h  ValueObject.cpp  ValueObject.h  ddd.py  gggg.cpp  save.cpp  words.txt
codecopy/logs/: codecopy_output_2026-05-10T15-47-52-886Z.txt  codecopy_output_2026-05-11T22-05-38-112Z.txt
